# sentinel

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml  scratch.md
.github/: copilot-instructions.md
.github/agents/: autonomous-builder.agent.md  designer.agent.md  planner.agent.md  reviewer.agent.md  tester.agent.md
.github/catalog/: MANIFEST.md  README.md
.github/catalog/agents/: critic.agent.md  product-owner.agent.md  security-reviewer.agent.md
.github/catalog/hooks/: ci-gate.py
.github/catalog/patterns/: DESIGN.md.template  commit-trailers.md
.github/catalog/prompts/: clarify.prompt.md  design-review.prompt.md
.github/hooks/: slice-gate.json  tool-guardrails.json
.github/hooks/scripts/: context-checkpoint.py  slice-gate.py  tool-guardrails.py
.github/instructions/: docs.instructions.md  web-ui.instructions.md
.github/prompts/: PROMPT-GUIDE.md  code-review.prompt.md  implement.prompt.md  implementation-plan-review.prompt.md  implementation-plan.prompt.md  phase-complete.prompt.md  phase-plan.prompt.md  security-audit.prompt.md  vision-expand.prompt.md  vision-update.prompt.md
.github/skills/setup-sentinel/: SKILL.md
.github/skills/sqlite-patterns/: SKILL.md
.github/skills/starlette-htmx/: SKILL.md
.github/skills/tree-sitter/: SKILL.md
.github/workflows/: ci.yml  release.yml
benchmarks/: 20260409T163753-sample-repo-qwen3.5-4b.toml  20260409T163809-tsgbuilder-qwen3.5-4b.toml  20260411T181737-sample-repo-qwen3.5-4b.toml  20260411T181802-sample-repo-qwen3.5-9b-q4_K_M.toml  20260411T181834-sentinel-qwen3.5-4b.toml  20260411T183535-sample-repo-gpt-5.4-nano.toml  20260411T183635-sentinel-gpt-5.4-nano.toml  20260413T200632-sample-repo-gpt-5.4-mini.toml  20260413T200800-sample-repo-gpt-5.4.toml  20260413T204502-pip-tools-gpt-5.4-mini.toml  20260413T213608-sample-repo-gpt-5.4-nano.toml  20260413T221449-sample-repo-gpt-5.4-nano.toml  20260413T221602-sample-repo-gpt-5.4-mini.toml  20260413T221734-pip-tools-gpt-5.4-nano.toml  20260413T222726-pip-tools-gpt-5.4-mini.toml  20260414T024137-sample-repo-qwen3.5-4b.toml  20260414T024209-sample-repo-qwen3.5-9b-q4_K_M.toml  20260414T024300-sentinel-qwen3.5-4b.toml  20260414T031115-sentinel-qwen3.5-4b.toml  20260414T031246-sentinel-qwen3.5-9b-q4_K_M.toml  20260414T031658-pip-tools-qwen3.5-4b.toml  20260414T031742-pip-tools-qwen3.5-9b-q4_K_M.toml  20260414T031846-sample-repo-qwen3.5-4b.toml  20260414T031917-sample-repo-qwen3.5-9b-q4_K_M.toml  20260414T152005-sample-repo-gpt-5.4-nano.toml  20260414T152029-sample-repo-gpt-5.4-mini.toml  20260414T152051-sample-repo-gpt-5.4.toml  20260414T152110-pip-tools-gpt-5.4-nano.toml  20260414T152330-pip-tools-gpt-5.4-mini.toml  20260414T152459-pip-tools-gpt-5.4.toml  20260414T152658-sentinel-gpt-5.4-nano.toml  20260414T153247-sentinel-gpt-5.4-mini.toml  20260414T153704-sentinel-gpt-5.4.toml  20260414T180435-pip-tools-gpt-5.4-mini.toml  20260414T180435-pip-tools-gpt-5.4-nano.toml  20260414T180435-pip-tools-gpt-5.4.toml  20260414T180435-sample-repo-gpt-5.4-mini.toml  20260414T180435-sample-repo-gpt-5.4-nano.toml  20260414T180435-sample-repo-gpt-5.4.toml  20260414T180435-sentinel-gpt-5.4-mini.toml  (+9 more)
benchmarks/ground-truth/: local-repo-sentinel.toml  pip-tools.toml
docs/analysis/: README.md  benchmarking-plan.md  competitive-landscape.md  critical-review.md  llm-detector-evaluation.md  project-history.md
docs/architecture/: README.md  detector-interface.md  overview.md
docs/architecture/decisions/: 001-local-first-execution.md  002-deterministic-detectors-first.md  003-model-agnostic-via-ollama.md  004-sqlite-state-from-day-one.md  005-docs-drift-first-class-detector.md  006-copilot-agent-primary-dev-tool.md  007-python-implementation-language.md  008-evaluation-criteria.md  009-embedding-context-gatherer.md  010-pluggable-model-provider.md  011-capability-tier-system.md  012-entry-points-plugin-system.md  013-per-detector-model-providers.md  014-replay-based-eval.md  015-web-ui-first-class-interface.md  016-benchmark-driven-model-quality.md  017-async-model-provider.md  018-benchmark-rigor.md  README.md
docs/archive/: brainstorm.md  raw-chat-log.md
docs/reference/: agent-improvement-log.md  benchmarking.md  compatibility-matrix.md  glossary.md  model-benchmarks.md  open-questions.md  tech-debt-resolved.md  tech-debt.md  test-repos.md
docs/vision/: README.md  VISION-LOCK.md  VISION-REVISION-002.md  positioning.md  strategy.md
docs/vision/archive/: VISION-LOCK-v5.md  VISION-REVISION-001.md  VISION-REVISION-003.md  VISION-REVISION-004.md  VISION-REVISION-005.md
roadmap/: CURRENT-STATE.md  README.md
roadmap/archive/phases/: phase-2-docs-drift.md  (+3 more)
roadmap/phases/: README.md  phase-1-mvp.md  phase-2-docs-drift.md  phase-5-semantic-detectors.md  phase-6-semantic-detectors.md  phase-7-provider-abstraction.md  phase-9-configurability-plugins.md
samples/: README.md  sample-cli-session.txt  sample-json-output.json  sample-report.md
src/sentinel/: __init__.py  __main__.py  cli.py  config.py  github.py  models.py
tests/: conftest.py  mock_provider.py  test_async_judge.py  test_async_provider.py  test_async_synthesis.py  test_benchmark.py  test_cli.py  test_clustering.py  test_config.py  test_context.py  test_dedup.py  test_detectors_base.py  test_embeddings.py  test_eval.py  test_extractors.py  test_github.py  test_incremental.py  test_indexer.py  test_integration.py  test_judge.py  test_llm_log.py  test_models.py  test_ollama.py  test_provider.py  test_repeatability.py  test_report.py  test_runner.py  test_store.py  test_synthesis.py  test_web.py
tests/detectors/: test_architecture_drift.py  test_cicd_drift.py  test_complexity.py  test_dead_code.py  test_dep_audit.py  test_docs_drift.py  test_eslint_runner.py  test_git_hotspots.py  test_go_linter.py  test_inline_comment_drift.py  test_intent_comparison.py  test_lint_runner.py  test_llm_detector_paths.py  test_rust_clippy.py  test_semantic_drift.py  test_stale_env.py  test_test_coherence.py  test_todo_scanner.py  test_unused_deps.py
tests/fixtures/: SAMPLE-REPO-GROUND-TRUTH.md
(+105 files in other folders)
