[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-repo-sentinel"
version = "0.1.0"
description = "Local evidence-backed repository issue triage for overnight code health monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
keywords = ["code-quality", "linting", "static-analysis", "llm", "code-review"]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/jakce/sentinel"
Repository = "https://github.com/jakce/sentinel"
Issues = "https://github.com/jakce/sentinel/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
detectors = [
    "ruff>=0.4",
    "pip-audit>=2.7",
]
web = [
    "starlette>=0.40",
    "jinja2>=3.1",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sentinel = ["web/templates/*.html", "web/static/*"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]
exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line-too-long (managed manually for readability)
    "UP042",   # replace-str-enum (StrEnum requires 3.11, keep compat pattern)
    "RUF001",  # ambiguous-unicode (intentional emoji in report output)
    "RUF043",  # pytest-raises-ambiguous-pattern (intentional in tests)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
